<resources>
    <string name="app_name">Finerio</string>
    <string name="hint_username">Username/Email</string>
    <string name="hint_password">Password</string>
    <string name="button_text_login">Login</string>
    <string name="header_text_date">Date</string>
    <string name="header_text_description">Description</string>
    <string name="header_text_monto">Monto</string>
    <string name="header_text_clas">Clasificacion</string>
    <string name="dialog_text_close_session">Deseas cerrar sesion?</string>
</resources>
